# ChangeLog for dev-python/Cheetah
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/Cheetah/ChangeLog,v 1.1 2002/06/04 07:40:24 george Exp $

*Cheetah-0.9.13.ebuild (03 Jun 2002)

  03 Jun 2002; George Shapovalov <george@gentoo.org> Cheetah-0.9.13.ebuild, files/digest-Cheetah-0.9.13 :
  
  First submission
  From the ebuild author:

  Cheetah is a Python-powered template engine and code generator. It may be used
  as a standalone utility or combined with other tools. Cheetah has many potential
  uses, but web developers looking for a viable alternative to ASP, JSP, PHP and
  PSP are expected to be its principle user group. 

  http://www.cheetahtemplate.org/  for more info.
  
  Ebuild submitted by Jason Jeremias <jason@penguinsolutions.com>.
