@@ -1,6 +1,6 @@
-# Copyright 1999-2000 Gentoo Technologies, Inc.
+# Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License, v2 or later
-# $Header: /var/cvsroot/gentoo-x86/dev-python/Numeric/Numeric-19.0.0.ebuild,v 1.6 2002/07/11 06:30:24 drobbins Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/Numeric/Numeric-19.0.0.ebuild,v 1.7 2002/07/27 05:40:14 george Exp $
 
 
 S=${WORKDIR}/${P}
@@ -9,6 +9,11 @@ SRC_URI="mirror://sourceforge/numpy/${P}.tar.gz"
 HOMEPAGE="http://www.pfdubois.com/numpy/"
 
 DEPEND="virtual/python"
+RDEPEND="${DEPEND}"
+
+SLOT="0"
+KEYWORDS="x86"
+LICENSE="as-is"
 
 PYTHON_VERSION=
 
