@@ -8,6 +8,12 @@ SRC_URI="mirror://sourceforge/pyxml/${P}.tar.gz"
 HOMEPAGE="http://pyxml.sourceforge.net/"
 
 DEPEND="virtual/python"
+RDEPEND="${DEPEND}"
+
+SLOT="0"
+KEYWORDS="x86"
+LICENSE="as-is"
+
 
 src_compile() {
 	python setup.py build || die
