@@ -1,8 +1,11 @@
 # ChangeLog for dev-python/Imaging
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-python/Imaging/ChangeLog,v 1.1 2002/02/01 21:53:28 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/Imaging/ChangeLog,v 1.2 2002/07/27 05:40:14 george Exp $
 
 *Imaging-1.1.2-r2 (1 Feb 2002)
+
+  26 Jul 2002; George Shapovalov <george@gentoo.org> Imaging-1.1.2-r2.euild :
+  added KEYWORDS,SLOT,LICENSE
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
   
