@@ -1,8 +1,12 @@
 # ChangeLog for dev-python/Numeric
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-python/Numeric/ChangeLog,v 1.2 2002/03/14 06:52:41 tod Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/Numeric/ChangeLog,v 1.3 2002/07/27 05:40:14 george Exp $
 
 *Numeric-21.0 (14 Mar 2002)
+
+  26 Jul 2002; George Shapovalov <george@gentoo.org> Numeric-19.0.0.ebuild, Numeric-20.3.ebuild, Numeric-21.0.ebuild :
+  added KEYWORDS,SLOT,LICENSE; corrected the header
+
 
   14 Mar 2002; T.Neidt <tod@gentoo.org> ChangeLog, Numeric-21.0.ebuild :
 
